add image to post metadata for enhanced visual appeal

--- a/posts/2025/who-benefits-rethinking-library-data-ai/libraries-as-training-data.qmd
+++ b/posts/2025/who-benefits-rethinking-library-data-ai/libraries-as-training-data.qmd
@@ -4,7 +4,7 @@ author: "Daniel van Strien"
 date: "2025-06-09"
 categories: [AI, libraries, datasets, GLAM, community]
 description: "From data providers to AI partners: How libraries can collaborate with developers to build tools that improve collections, enhance discovery, and serve communities while contributing to responsible AI development."
-image: ""
+image: "https://github.com/davanstrien/blog/blob/7f7b15b8a85a9967f18b994b7c80f1cbbcfedbb0/posts/2025/who-benefits-rethinking-library-data-ai/assets/finebooks-illusration.png?raw=true"
 draft: false
 ---
 
