Add 'hf Jobs' category to vllm-batch-inference notebook metadata

--- a/posts/2025/hf-jobs/vllm-batch-inference.ipynb
+++ b/posts/2025/hf-jobs/vllm-batch-inference.ipynb
@@ -9,7 +9,7 @@
     "title: \"Efficient batch inference for LLMs with vLLM + UV Scripts on HF Jobs\"\n",
     "description: \"Generate responses for thousands of dataset prompts using Qwen3-30B-A3B-Instruct across 4 GPUs with automatic prompt filtering and tensor parallelism\"\n",
     "author: \"Daniel van Strien\"\n",
-    "categories: [\"huggingface\", \"uv-scripts\", \"vllm\"]\n",
+    "categories: [\"huggingface\", \"uv-scripts\", \"vllm\", \"hf Jobs\"]\n",
     "image: https://github.com/davanstrien/blog/blob/a2ff89fbd48d22e0f4a984b03a81a92c07080eea/posts/2025/hf-jobs/assets/is-this-uv-script.jpg?raw=true\n",
     "---"
    ]
