Add markdown cells to display job results and embed dataset viewer

--- a/posts/2025/hf-jobs/vllm-batch-inference.ipynb
+++ b/posts/2025/hf-jobs/vllm-batch-inference.ipynb
@@ -1329,6 +1329,27 @@
     "    )[:-10]\n",
     ")  # Print the last 10 lines of logs"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24b26128",
+   "metadata": {},
+   "source": [
+    "We can also see the resulting dataset for the job [here](https://huggingface.co/datasets/davanstrien/test-generated-responses) or below. You can see we have the original prompts and the generated responses."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38001a5d",
+   "metadata": {},
+   "source": [
+    "<iframe\n",
+    "  src=\"https://huggingface.co/datasets/davanstrien/test-generated-responses/embed/viewer/default/train\"\n",
+    "  frameborder=\"0\"\n",
+    "  width=\"100%\"\n",
+    "  height=\"560px\"\n",
+    "></iframe>"
+   ]
   }
  ],
  "metadata": {
