Add explanation of vLLM and its batch inference capabilities

--- a/posts/2025/hf-jobs/vllm-batch-inference.ipynb
+++ b/posts/2025/hf-jobs/vllm-batch-inference.ipynb
@@ -38,6 +38,11 @@
     "\n",
     "Traditional approaches involve complex Docker setups, manual dependency management, and custom scripts for GPU coordination. HF Jobs changes this.\n",
     "\n",
+    "## What is vLLM?\n",
+    "\n",
+    "vLLM is a very well known and heavily used inference engine. It is known for its ability to scale inference for LLMs. While we can use vLLM via an OpenAI compatible API, it also has a powerful batch inference mode that allows us to process large datasets of prompts efficiently. This \"offline inference\" is particularly useful when we want to generate responses for a large number of prompts without the overhead of API calls.\n",
+    "\n",
+    "\n",
     "## What are uv Scripts?\n",
     "\n",
     "UV scripts are Python scripts with inline dependency metadata that automatically install and manage their requirements. Instead of separate `requirements.txt` files or complex setup instructions, everything needed to run the script is declared in the script itself:\n",
