Update model description and improve formatting in vllm-batch-inference notebook

--- a/posts/2025/hf-jobs/vllm-batch-inference.ipynb
+++ b/posts/2025/hf-jobs/vllm-batch-inference.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "---\n",
     "title: \"Efficient batch inference for LLMs with vLLM + UV Scripts on HF Jobs\"\n",
-    "description: \"Generate responses for thousands of dataset prompts using Qwen3-30B-A3B-Instruct across 4 GPUs with automatic prompt filtering and tensor parallelism\"\n",
+    "description: \"Generate responses for thousands of dataset prompts using Qwen/Qwen3-30B-A3B-Instruct-2507 across 4 GPUs with automatic prompt filtering and tensor parallelism\"\n",
     "author: \"Daniel van Strien\"\n",
     "categories: [\"huggingface\", \"uv-scripts\", \"vllm\", \"hf Jobs\"]\n",
     "image: https://github.com/davanstrien/blog/blob/a2ff89fbd48d22e0f4a984b03a81a92c07080eea/posts/2025/hf-jobs/assets/is-this-uv-script.jpg?raw=true\n",
@@ -87,7 +87,7 @@
    "id": "1c1a2b04",
    "metadata": {},
    "source": [
-    "If you are curious, you can check out the script [here](https://huggingface.co/datasets/uv-scripts/vllm/raw/main/generate-responses.py) or below:\n"
+    "If you are curious, you can check out the script [here](https://huggingface.co/datasets/uv-scripts/vllm/raw/main/generate-responses.py) or below:"
    ]
   },
   {
@@ -1683,19 +1683,19 @@
     "job = api.run_uv_job(\n",
     "    script=\"https://huggingface.co/datasets/uv-scripts/vllm/raw/main/generate-responses.py\",\n",
     "    script_args=[\n",
-    "        \"davanstrien/cards_with_prompts\", # Dataset with prompts\n",
-    "        \"davanstrien/test-generated-responses\", # Where to store the generated responses\n",
-    "        \"--model-id\", # Model to use for inference\n",
-    "        \"Qwen/Qwen3-30B-A3B-Instruct-2507\", # Model to use for inference\n",
-    "        \"--gpu-memory-utilization\", # GPU memory utilization\n",
+    "        \"davanstrien/cards_with_prompts\",  # Dataset with prompts\n",
+    "        \"davanstrien/test-generated-responses\",  # Where to store the generated responses\n",
+    "        \"--model-id\",  # Model to use for inference\n",
+    "        \"Qwen/Qwen3-30B-A3B-Instruct-2507\",  # Model to use for inference\n",
+    "        \"--gpu-memory-utilization\",  # GPU memory utilization\n",
     "        \"0.9\",\n",
-    "        \"--max-tokens\", # Maximum number of tokens\n",
+    "        \"--max-tokens\",  # Maximum number of tokens\n",
     "        \"900\",\n",
-    "        \"--max-model-len\", # Maximum model length\n",
+    "        \"--max-model-len\",  # Maximum model length\n",
     "        \"8000\",\n",
     "    ],\n",
-    "    flavor=\"l4x4\", # What hardware to use\n",
-    "    image=\"vllm/vllm-openai:latest\", # Docker image to use\n",
+    "    flavor=\"l4x4\",  # What hardware to use\n",
+    "    image=\"vllm/vllm-openai:latest\",  # Docker image to use\n",
     "    secrets={\"HF_TOKEN\": HF_TOKEN},  # Pass as secret``\n",
     "    env={\"UV_PRERELEASE\": \"if-necessary\"},  # Pass as env var\n",
     ")"
