Update tutorial metadata and content for Iconclass VLM fine-tuning guide

--- a/posts/2025/iconclass-vlm-sft/vlm-sft.ipynb
+++ b/posts/2025/iconclass-vlm-sft/vlm-sft.ipynb
@@ -6,19 +6,19 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Fine tuning a VLM using TRL and Hugging Face Jobs\"\n",
-    "description: \"This tutorial covers the process of fine-tuning a Vision-Language Model (VLM) using the TRL library and Hugging Face Jobs for creating a specialized model.\"\n",
+    "title: \"Fine-tuning Vision-Language Models for Art History: Iconclass Classification with TRL and HF Jobs\"\n",
+    "description: \"Learn how to fine-tune open-source VLMs like Qwen2.5-VL for specialized art history tasks using Iconclass metadata. This tutorial shows how to use TRL's new VLM support with Hugging Face Jobs for cloud-based training - no local GPU required!\"\n",
     "author: \"Daniel van Strien\"\n",
-    "categories: [\"huggingface\", \"uv-scripts\", \"vlm\", \"hf Jobs\"]\n",
+    "categories: [\"huggingface\", \"uv-scripts\", \"vlm\", \"hf Jobs\", \"art-history\", \"iconclass\"]\n",
     "image: https://github.com/davanstrien/blog/blob/main/posts/2025/iconclass-vlm-sft/assets/iconclass-post-visual.png?raw=true\n",
     "twitter-card:\n",
-    "  title: \"Fine-tuning a VLM for art history with TRL and HF Jobs\"\n",
-    "  description: \"Learn how to fine-tune vision-language models for specialized tasks like Iconclass metadata generation using TRL's VLM support and Hugging Face Jobs - no local GPU required!\"\n",
+    "  title: \"Fine-tuning VLMs for Art History with TRL and HF Jobs\"\n",
+    "  description: \"Train vision-language models to generate Iconclass metadata for artworks using TRL's VLM support and cloud GPUs - no local setup needed!\"\n",
     "  image: https://github.com/davanstrien/blog/blob/main/posts/2025/iconclass-vlm-sft/assets/iconclass-post-visual.png?raw=true\n",
     "  card-style: summary_large_image\n",
     "open-graph:\n",
-    "  title: \"Fine-tuning a VLM for art history with TRL and HF Jobs\"\n",
-    "  description: \"Learn how to fine-tune vision-language models for specialized tasks like Iconclass metadata generation using TRL's VLM support and Hugging Face Jobs - no local GPU required!\"\n",
+    "  title: \"Fine-tuning VLMs for Art History with TRL and HF Jobs\"\n",
+    "  description: \"Train vision-language models to generate Iconclass metadata for artworks using TRL's VLM support and cloud GPUs - no local setup needed!\"\n",
     "  image: https://github.com/davanstrien/blog/blob/main/posts/2025/iconclass-vlm-sft/assets/iconclass-post-visual.png?raw=true\n",
     "toc-depth: 3\n",
     "toc: true\n",
@@ -32,7 +32,12 @@
    "source": [
     "## Fine tuning a Qwen model to assign art history metadata \n",
     "\n",
-    "Open VLMs have become increasingly competitive with proprietary models but all models (including proprietary) can face challenges in adapting to specific domains like art history. Using supervised fine tuning can help improve a model's performance on specialized tasks like this.\n",
+    "Open VLMs have become increasingly competitive with proprietary models but all models (including proprietary) can face challenges in adapting to specific domains like art history. Using Supervised Fine Tuning (SFT) can help improve a model's performance on specialized tasks like this.\n",
+    "\n",
+    "::: {.callout-tip}\n",
+    "## Who is this for?\n",
+    "This is a fairly technical tutorial for developers, GLAM staff, DH researchers etc. comfortable with Python and machine learning concepts. I plan to write a post on *why* I think this kind of model is important for GLAM in a future post!\n",
+    ":::\n",
     "\n",
     "Recently, [TRL](https://github.com/huggingface/trl) a very popular library for training transformers models using a variety of training approaches added support for supervised fine tuning of VLMs! Combined with the recently released HF Jobs service we can use TRL to do SFT on a VLM with no local GPU setup required!"
    ]
@@ -86,6 +91,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d1637ac",
+   "metadata": {},
+   "source": [
+    "::: {.callout-note}\n",
+    "This is the first in a two-part series on fine-tuning VLMs for specialized tasks. In this post, we'll cover supervised fine-tuning (SFT). The next post will explore using GRPO (Group Relative Policy Optimization) to further improve model performance!\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e5961cb5",
    "metadata": {},
    "source": [
@@ -101,7 +116,9 @@
    "source": [
     "### Preparing a dataset\n",
     "\n",
-    "The steps to train a VLM using SFT are very minimal when using TRL. The main thing we need to take care of is finding or preparing a dataset in the [right format](https://huggingface.co/docs/trl/en/dataset_formats#vision-datasets).\n",
+    "The steps to train a VLM using SFT are very minimal when using TRL. To do SFT for a VLM model we need to have a dataset with images + labels (text) output.\n",
+    "\n",
+    "For TRL, the main thing we need to take care of is finding or preparing a dataset in the [right format](https://huggingface.co/docs/trl/en/dataset_formats#vision-datasets).\n",
     "\n",
     "Fortunately, there is already a dataset available on Hugging Face that contains images of artworks along with their corresponding Iconclass metadata. \n",
     "\n",
