Enhance VLM fine-tuning tutorial with detailed explanations of the training script and its components

--- a/posts/2025/iconclass-vlm-sft/vlm-sft.ipynb
+++ b/posts/2025/iconclass-vlm-sft/vlm-sft.ipynb
@@ -1344,6 +1344,18 @@
    "source": [
     "### The TRL SFT training script\n",
     "\n",
+    "With our dataset ready, we need a training script that can handle VLM fine-tuning. The beauty of TRL's VLM support is that it makes this surprisingly straightforward - the same `SFTTrainer` that works for LLMs now handles vision-language models seamlessly.\n",
+    "\n",
+    "#### What makes this script VLM-ready?\n",
+    "\n",
+    "The key differences from a standard LLM training script are minimal:\n",
+    "\n",
+    "1. **Model loading**: We use `AutoModelForImageTextToText` instead of the text-only variant\n",
+    "2. **Dataset format**: Our dataset includes an `images` column alongside `messages`\n",
+    "3. **No tokenizer needed**: The model handles both image and text processing internally\n",
+    "\n",
+    "That's it! TRL handles all the complexity of multi-modal training under the hood. Let's look at the script:\n",
+    "\n",
     "You can find the full version of the script we're running in [main.py](https://raw.githubusercontent.com/davanstrien/blog/6da3910870f14a502626fd9c627da622e3122a3b/posts/2025/iconclass-vlm-sft/assets/main.py) but we can also see the most important parts below."
    ]
   },
@@ -1423,19 +1435,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "qto3juo1lci",
+   "metadata": {},
+   "source": [
+    "#### Key components explained\n",
+    "\n",
+    "Let's break down the important parts:\n",
+    "\n",
+    "1. **TRL's argument parsing**: The `TrlParser` handles all configuration - model settings, training hyperparameters, and dataset paths. This gives us a production-ready CLI interface for free.\n",
+    "\n",
+    "2. **Model loading for VLMs**: \n",
+    "   ```python\n",
+    "   model = AutoModelForImageTextToText.from_pretrained(...)\n",
+    "   ```\n",
+    "   This automatically loads the right architecture for vision-language models. It handles models like Qwen2.5-VL, SmolVLM2, and others that support image+text inputs.\n",
+    "\n",
+    "3. **Quantization support**: The script includes optional quantization (`get_quantization_config`) for running larger models on smaller GPUs. Perfect for experiments before scaling up.\n",
+    "\n",
+    "4. **Dataset handling**: Notice how simple the dataset loading is - just point to your Hub dataset with the formatted `images` and `messages` columns.\n",
+    "\n",
+    "5. **The SFTTrainer**: The same trainer used for text models now handles VLMs. No special configuration needed - it detects the multi-modal dataset and adjusts accordingly.\n",
+    "\n",
+    "The script is designed to be flexible - you can run it locally for testing or scale to A100s on HF Jobs just by changing the hardware configuration."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "18945c09",
    "metadata": {},
    "source": [
-    "The training script looks as you'd expect a TRL script to look. One addition in the full script is inline script metadata for the dependencies. This let's `uv` know which libraries to install (we'll see another way we can specify dependencies later).\n",
+    "#### Script dependencies with UV\n",
     "\n",
-    "```\n",
+    "The training script includes inline script metadata that tells `uv` which dependencies to install. This makes the script completely self-contained:\n",
+    "\n",
+    "```python\n",
     "# /// script\n",
     "# dependencies = [\n",
     "#     \"trl\",\n",
     "#     \"Pillow>=9.4.0\",\n",
     "# ]\n",
     "# ///\n",
-    "```"
+    "```\n",
+    "\n",
+    "With this metadata, `uv run` automatically installs the exact dependencies needed before running the script - no virtual environment setup or requirements.txt needed! This is what makes HF Jobs + UV so powerful: your training environment is fully reproducible with zero manual setup.\n",
+    "\n",
+    "::: {.callout-tip}\n",
+    "## Pro tip: Additional dependencies\n",
+    "When submitting to HF Jobs, you can also specify additional dependencies at runtime (like we do with `tensorboard`, `wandb`, etc.). This is useful for optional integrations that not everyone needs.\n",
+    ":::"
    ]
   },
   {
@@ -2670,14 +2717,12 @@
    "id": "15f025be",
    "metadata": {},
    "source": [
-    "## Evaluating the model's performance so far"
+    "## Exploring the Results\n",
+    "\n",
+    "After training completes, our fine-tuned model is automatically pushed to the Hub. But how well does it actually perform on generating Iconclass codes? \n",
+    "\n",
+    "I've built an interactive viewer to explore the model's predictions on the test set - you can compare the ground truth labels with what our fine-tuned model generates:"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "71122c84",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2694,12 +2739,70 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7np8gwawrnp",
+   "metadata": {},
+   "source": [
+    "### Initial observations\n",
+    "\n",
+    "From exploring the predictions, a few patterns emerge:\n",
+    "\n",
+    "- The model successfully learns the hierarchical structure of Iconclass codes\n",
+    "- Common iconographic elements (religious scenes, portraits) are well recognized\n",
+    "- More specific or rare codes show room for improvement\n",
+    "\n",
+    "This is a solid baseline from just one epoch of training! In the next post, we'll see how GRPO can push performance further without needing any additional labeled data.\n",
+    "\n",
+    "::: {.callout-note}\n",
+    "## Try the model yourself\n",
+    "The fine-tuned model is available at [`davanstrien/iconclass-vlm`](https://huggingface.co/davanstrien/iconclass-vlm) if you want to experiment with it on your own art history images!\n",
+    ":::\n",
+    "\n",
+    "::: {.callout-tip}\n",
+    "## Building evaluation tools\n",
+    "Interested in how the prediction viewer was built? I'll cover that in a separate post about creating interactive model evaluation tools using vibe coding and the Hugging Face datasets viewer API!\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b2bd6802",
    "metadata": {},
    "source": [
     "\n",
     "\n",
     "[^1]: [Iconclass. (n.d.). In Wikipedia. Retrieved from https://en.wikipedia.org/wiki/Iconclass](https://iconclass.org/help/about)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9au31pu9wgj",
+   "metadata": {},
+   "source": [
+    "## Conclusion: Making VLM Fine-tuning Accessible\n",
+    "\n",
+    "We've successfully fine-tuned a vision-language model to generate specialized art history metadata - and the entire process required just a few steps:\n",
+    "\n",
+    "1. Format a dataset with images and expected responses\n",
+    "2. Write (or adapt) a simple TRL training script\n",
+    "3. Submit to HF Jobs with `uv run` for cloud-based training\n",
+    "\n",
+    "The combination of TRL's VLM support and HF Jobs removes the traditional barriers to specialized model training. No local GPU setup, no complex multi-modal training code, no infrastructure management.\n",
+    "\n",
+    "### What's Next: Pushing Performance with GRPO\n",
+    "\n",
+    "While our SFT model shows promising results, we can go further. In the next post, I'll show how to use GRPO (Group Relative Policy Optimization) to further refine the model. \n",
+    "\n",
+    "GRPO lets the model learn from its own predictions, and let's us define more nuanced reward functions which could work very well for this kind of domain specific use case!\n",
+    "\n",
+    "### Resources\n",
+    "\n",
+    "- 🤗 **Model**: [`davanstrien/iconclass-vlm`](https://huggingface.co/davanstrien/iconclass-vlm)\n",
+    "- 📊 **Dataset**: [`davanstrien/iconclass-vlm-sft`](https://huggingface.co/datasets/davanstrien/iconclass-vlm-sft)\n",
+    "- 💻 **Training Script**: [main.py](https://raw.githubusercontent.com/davanstrien/blog/6da3910870f14a502626fd9c627da622e3122a3b/posts/2025/iconclass-vlm-sft/assets/main.py)\n",
+    "- 📚 **TRL VLM Docs**: [VLM Support in TRL](https://huggingface.co/docs/trl/en/sft_trainer#vision-language-models)\n",
+    "- ⚡ **HF Jobs Docs**: [Hugging Face Jobs Documentation](https://huggingface.co/docs/hub/spaces-sdks-jobs)\n",
+    "\n",
+    "This kind of approach could have many benefits for GLAM institutions and other specialist domains. As usual the main thing you need is to focus on the data! Creating and sharing a cool dataset is the first (and a very crucial) step towards building effective AI models for a new domain. Thanks to Etienne Posthumus for creating and sharing the initial dataset that made this project possible!"
    ]
   }
  ],
