--- a/posts/2025/iconclass-vlm-sft/trl-vlm-fine-tuning-iconclass.ipynb
+++ b/posts/2025/iconclass-vlm-sft/trl-vlm-fine-tuning-iconclass.ipynb
@@ -9,6 +9,7 @@
     "title: \"Fine-tuning Vision-Language Models for Art History: Iconclass Classification with TRL and HF Jobs\"\n",
     "description: \"Learn how to fine-tune open-source VLMs like Qwen2.5-VL for specialized art history tasks using Iconclass metadata. This tutorial shows how to use TRL's new VLM support with Hugging Face Jobs for cloud-based training - no local GPU required!\"\n",
     "author: \"Daniel van Strien\"\n",
+    "date: \"2025-09-04\"\n",
     "categories: [\"huggingface\", \"uv-scripts\", \"vlm\", \"hf Jobs\", \"art-history\", \"iconclass\"]\n",
     "image: https://github.com/davanstrien/blog/blob/main/posts/2025/iconclass-vlm-sft/assets/iconclass-post-visual.png?raw=true\n",
     "twitter-card:\n",
@@ -20,7 +21,7 @@
     "  title: \"Fine-tuning VLMs for Art History with TRL and HF Jobs\"\n",
     "  description: \"Train vision-language models to generate Iconclass metadata for artworks using TRL's VLM support and cloud GPUs - no local setup needed!\"\n",
     "  image: https://github.com/davanstrien/blog/blob/main/posts/2025/iconclass-vlm-sft/assets/iconclass-post-visual.png?raw=true\n",
-    "toc-depth: 3\n",
+    "toc-depth: 4\n",
     "toc: true\n",
     "---"
    ]
