--- a/posts/2025/iconclass-vlm-sft/trl-vlm-fine-tuning-iconclass.ipynb
+++ b/posts/2025/iconclass-vlm-sft/trl-vlm-fine-tuning-iconclass.ipynb
@@ -2656,6 +2656,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7bf6668d",
+   "metadata": {},
+   "source": [
+    "We can now check the status of the Job."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "id": "2da7e0fd",
@@ -2674,6 +2682,14 @@
    ],
    "source": [
     "job.status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d7c27b7",
+   "metadata": {},
+   "source": [
+    "We can also get a URL to see the logs etc for the Job on the Hub."
    ]
   },
   {
@@ -2696,22 +2712,6 @@
    "source": [
     "job.url"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d78a0abd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85a63450",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
