--- a/posts/2025/iconclass-vlm-sft/trl-vlm-fine-tuning-iconclass.ipynb
+++ b/posts/2025/iconclass-vlm-sft/trl-vlm-fine-tuning-iconclass.ipynb
@@ -45,6 +45,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2813349f",
+   "metadata": {},
+   "source": [
+    "**tl;dr** in this post we see how we can train a small specialized VLM [davanstrien/iconclass-vlm](https://huggingface.co/davanstrien/iconclass-vlm) using the `trl` library + HF Jobs.\n",
+    "\n",
+    "This is a model that given an image like this\n",
+    "\n",
+    "![](https://github.com/davanstrien/blog/blob/90528d954afd889f1daa73452f6b1f62bb07c9c0/posts/2025/iconclass-vlm-sft/assets/image-example.jpg?raw=true)\n",
+    "\n",
+    "Will return:\n",
+    "\n",
+    "```python\n",
+    "{\"iconclass-codes\": [\"25H213\", \"25H216\", \"25I\"]}\n",
+    "```\n",
+    "\n",
+    "Which translates too:\n",
+    "\n",
+    "- `25H216`: waterfall\n",
+    "- `25H213`: river\n",
+    "- `25I` \"city-view, and landscape with man-made constructions\"\n",
+    "\n",
+    "We can see the model isn't perfect yet but that's what the follow up post will dig into!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b89b8353",
    "metadata": {},
    "source": [
